fix: smaller header on mobile

--- a/assets/sass/grid.scss
+++ b/assets/sass/grid.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 :root {
   --column-width: calc(1260px / 3);
 }
@@ -36,7 +38,11 @@ main {
 
 .slider-row {
   grid-row: slider;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
+
+  @include variables.desktop {
+    padding-bottom: 30px;
+  }
 }
 
 .menu-row {
@@ -44,7 +50,7 @@ main {
 }
 
 .content-row {
-  padding: 1.5em 0;
+  padding: 1em 0;
   grid-row: content;
 }
 
